tests/snapshots/commands_from_ui__diff pulled.snap
---
source: tests/commands_from_ui.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────↑─────────────Chats─────────────┐"
"│ No changes                                                                                                                   ║ 󰍩  Kwek                       │"
"│ ℹ Command diff successful in 0 seconds                                                                                       █                               │"
"│ ℹ Command exec successful in 0 seconds                                                                                       █                               │"
"│ diff --git a/hello.txt b/hello.txt                                                                                           █                               │"
"│ index 5dd01c1..cc628cc 100644                                                                                                █                               │"
"│ --- a/hello.txt                                                                                                              █                               │"
"│ +++ b/hello.txt                                                                                                              █                               │"
"│ @@ -1 +1 @@                                                                                                                  █                               │"
"│ -Hello, world!                                                                                                               █                               │"
"│ \ No newline at end of file                                                                                                  █                               │"
"│ +world                                                                                                                       █                               │"
"│ ℹ Command diff successful in 0 seconds                                                                                       █                               │"
"│ ℹ Pulled diff into branch kwaak/936da01f-9abd-4d9d-80c7-02af85c822a8                                                         █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █─────────Chat commands─────────┤"
"│                                                                                                                              █                               │"
"│                                                                                                                              █ /quit                         │"
"│                                                                                                                              ║ /show_config                  │"
"│                                                                                                                              ║ /index_repository             │"
"│                                                                                                                              ║ /next_chat                    │"
"│                                                                                                                              ║ /new_chat                     │"
"│                                                                                                                              ║ /delete_chat                  │"
"│                                                                                                                              ║ /copy                         │"
"│                                                                                                                              ║ /diff                         │"
"│                                                                                                                              ║ /help                         │"
"│                                                                                                                              ↓                               │"
"├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤──────────Keybindings──────────┤"
"│  Send a message to an agent ...                                                                                              │                               │"
"│                                                                                                                              │ Page Up/Down - Scroll         │"
"│                                                                                                                              │ End - Scroll to end           │"
"│                                                                                                                              │ ^s - Send message             │"
"│                                                                                                                              │ ^x - Stop agent               │"
"│                                                                                                                              │                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴───────────────────────────────┘"
"                                                                                                                     kwaak/936da01f-9abd-4d9d-80c7-02af85c822a8 "
"                                                                                                                                                                "
